--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Class Roster</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <h1>Our Full-Stack Class!</h1>
-        </nav>
+      <nav>
+        <h1>Our Full-Stack Class!</h1>
+      </nav>
     </header>
     <main>
-        <h2>Class Members</h2>
-        <section class="container">
-            <div class="jane-style">
-                <h3>Hello World!</h3>
-            </div>
-            <!-- New HTML content goes here! -->
-            <div class="code-ninja-style">
-                <h3>This is first time using GitHub!</h3>
-            </div>
-            <div class="codys-styles">
-                <h3>That's very exciting!</h3>
-            </div>
-        </section>
+      <h2>Class Members</h2>
+      <section class="container">
+        <div class="jane-style">
+          <h3>Hello World!</h3>
+        </div>
+        <!-- New HTML content goes here! -->
+        <div class="my-style">
+          <h3>Thomas Griep></h3>
+          <div>I'm a piano player <em> really</em>en> I am.</div>
+        </div>
+        <div class="code-ninja-style">
+          <h3>This is first time using GitHub!</h3>
+        </div>
+        <div class="codys-styles">
+          <h3>That's very exciting!</h3>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
