--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <!-- New HTML content goes here! -->
         <div class="my-style">
+          { color: blue; background-color: black; padding: 3px; }
           <h3>Thomas Griep></h3>
           <div>I'm a piano player <em> really</em>en> I am.</div>
         </div>
@@ -27,7 +28,7 @@
           <h3>This is first time using GitHub!</h3>
         </div>
         <div class="codys-styles">
-          <h3>That's very exciting!</h3>
+          <h3>That's kind of exciting!</h3>
         </div>
       </section>
     </main>
