--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <h3>Hello World!</h3>
         </div>
         <!-- New HTML content goes here! -->
-        <div class="my-style">
+        <div class="my-style"></div>
           { color: blue; background-color: black; padding: 3px; }
           <h3>Thomas Griep></h3>
-          <div>I'm a piano player <em> really</em>en> I am.</div>
+          <div>I'm a piano player <em> really</em> I am.</div>
         </div>
         <div class="code-ninja-style">
           <h3>This is first time using GitHub!</h3>
