--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav>
-        <h1>Our Full-Stack Class!</h1>
+        <h1>Our Full-Stack Class is complex</h1>
       </nav>
     </header>
     <main>
-      <h2>Class Members</h2>
+      <h2>Fellow Class Members</h2>
       <section class="container">
         <div class="jane-style">
           <h3>Hello World!</h3>
@@ -21,7 +21,7 @@
         <!-- New HTML content goes here! -->
         <div class="my-style"></div>
           { color: blue; background-color: black; padding: 3px; }
-          <h3>Thomas Griep></h3>
+          <h3>Thomas Griep</h3>
           <div>I'm a piano player <em> really</em> I am.</div>
         </div>
         <div class="code-ninja-style">
