--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <h1>Our Full-Stack Class is complex</h1>
+        <h1>Our Full-Stack Class!</h1>
       </nav>
     </header>
     <main>
@@ -20,8 +20,8 @@
         </div>
         <!-- New HTML content goes here! -->
         <div class="my-style"></div>
-          { color: blue; background-color: black; padding: 3px; }
-          <h3>Thomas Griep</h3>
+          
+          <h3>Thomas Griep></h3>
           <div>I'm a piano player <em> really</em> I am.</div>
         </div>
         <div class="code-ninja-style">
