--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h3>This is first time using GitHub!</h3>
         </div>
         <div class="codys-styles">
-          <h3>That's kind of exciting!</h3>
+          <h3>That's kind of exciting! Cats are nice</h3>
         </div>
       </section>
     </main>
